@@ -104,6 +104,8 @@ Changes in current version:
  o constify struct timeval * where possible
  o make event_get_supported_methods obey environment variables
  o support for edge-triggered events on epoll and kqueue backends: patch from Valery Kholodkov
+ o support for selecting event backends by their features, and for querying the features of a backend.
+ o change failing behavior of event_base_new_with_config: if a config is provided and no backend is selected, return NULL instead of aborting.
 
 
 Changes in 1.4.0:
